--- a/app/src/main/res/layout/event_cardview.xml
+++ b/app/src/main/res/layout/event_cardview.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:id="@+id/card_project_item"
-    android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/Projectimage"
+        android:id="@+id/img_event"
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:translationZ="120dp"
@@ -28,7 +28,7 @@
         >
         <TextView
             android:paddingTop="50dp"
-            android:id="@+id/ProjectName"
+            android:id="@+id/event_name_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -39,7 +39,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/event_discription_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="50dp"
