--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,72 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back"
+    android:orientation="vertical"
     tools:context=".ui.home.HomeAcivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <TextView
+        android:id="@+id/Projects_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:gravity="center_vertical"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:text="Home Services"
+        android:textColor="#617C79"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01">
+        app:layout_constraintVertical_bias="0.01" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:layout_marginTop="10dp"
+        android:layout_width="320dp"
+        android:layout_marginLeft="20dp"
+        android:layout_height="180dp"
+        app:cardCornerRadius="20dp"
+        android:layout_marginRight="5dp"
+        >
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:src="@drawable/logo_home">
 
-            <ImageView
+        </ImageView>
+    </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="8dp"
+        >
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginRight="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Crew"
+                android:textColor="@color/back"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+            <ImageButton
                 android:id="@+id/btn_crew"
-                android:layout_width="269dp"
-                android:layout_height="122dp"
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/crew" />
+                android:paddingRight="50dp"
+                android:src="@drawable/crew_home"
+                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:background="@drawable/imageradious"
+                android:layout_marginRight="35dp"
+                />
+        </androidx.cardview.widget.CardView>
 
-            <ImageView
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Project"
+                android:textColor="#88B5B0"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+            <ImageButton
                 android:id="@+id/btn_project"
-                android:layout_width="271dp"
-                android:layout_height="147dp"
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_crew"
-                app:srcCompat="@drawable/projects" />
+                android:paddingRight="50dp"
+                android:src="@drawable/project_home"
+                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:background="@drawable/imageradious"
+                android:layout_marginRight="35dp"
+                />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
-            <ImageView
+
+    <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        >
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginRight="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Event"
+                android:textColor="#88B5B0"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+
+            <ImageButton
                 android:id="@+id/btn_event"
-                android:layout_width="274dp"
-                android:layout_height="131dp"
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_project"
-                app:srcCompat="@drawable/events" />
-
-            <ImageView
+                android:paddingRight="50dp"
+                android:layout_width="200dp"
+                android:layout_height="211dp"
+                android:background="@drawable/imageradious"
+                android:src="@drawable/event_home" />
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:layout_width="150dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="About Us"
+                android:textColor="#88B5B0"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+            <ImageButton
                 android:id="@+id/btn_about"
-                android:layout_width="271dp"
-                android:layout_height="128dp"
-
-                android:layout_marginStart="52dp"
-                android:layout_marginTop="12dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_event"
-                app:srcCompat="@drawable/about" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:paddingRight="50dp"
+                android:src="@drawable/about_home"
+                android:layout_height="200dp"
+                android:layout_width="200dp"
+                android:background="@drawable/imageradious"
+                android:layout_marginRight="35dp"
+                />
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</LinearLayout>
