--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -14,6 +14,29 @@
             android:background="#E7EDF6"
             tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#E7EDF6"
+        tools:context=".MainActivity">
+        <ImageView
+            android:id="@+id/back_about"
+            android:src="@drawable/back"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:fontFamily="cursive"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="6dp"
+            android:textColor="#617C79"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.01" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,6 +53,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.01" />
+    </LinearLayout>
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,6 +62,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
                     android:orientation="horizontal">
                     <ImageView
                         android:id="@+id/img_faceboo"
@@ -76,6 +101,7 @@
                 android:layout_height="160dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
+                android:paddingLeft="8dp"
                 android:backgroundTint="#88B5B0"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
@@ -98,6 +124,7 @@
                 android:layout_height="130dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
+                android:paddingLeft="8dp"
                 android:backgroundTint="#88B5B0"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
@@ -122,6 +149,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
+                android:paddingLeft="8dp"
                 android:backgroundTint="#88B5B0"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
@@ -148,6 +176,7 @@
                 android:layout_width="wrap_content"
                 android:textStyle="bold"
                 android:textSize="20dp"
+                android:layout_marginLeft="8dp"
                 android:textColor="#617C79"
                 android:text="OUR COMMUNITY"
                 android:paddingLeft="5dp"
