--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,14 @@
     android:orientation="vertical"
     tools:context=".ui.home.HomeAcivity">
 
+     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#E7EDF6"
+        tools:context=".MainActivity">
+
+
     <TextView
         android:id="@+id/Projects_id"
         android:layout_width="match_parent"
@@ -27,18 +35,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
+     </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_marginTop="10dp"
-        android:layout_width="320dp"
-        android:layout_marginLeft="20dp"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="10dp"
         android:layout_height="180dp"
         app:cardCornerRadius="20dp"
-        android:layout_marginRight="5dp"
+        android:background="@color/back"
+        android:layout_marginRight="10dp"
         >
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/logo_home">
+            android:layout_height="wrap_content"
+            android:background="@color/back"
+            android:src="@drawable/fullgraylogo">
 
         </ImageView>
     </androidx.cardview.widget.CardView>
@@ -47,7 +59,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginBottom="8dp"
         >
         <androidx.cardview.widget.CardView
@@ -62,15 +74,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="Crew"
-                android:textColor="@color/back"
+                android:textColor="#88B5B0"
                 android:textSize="18dp"
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_crew"
-                android:paddingRight="50dp"
+                android:paddingRight="20dp"
                 android:src="@drawable/crew_home"
-                android:layout_height="200dp"
-                android:layout_width="200dp"
+                android:layout_height="160dp"
+                android:layout_width="150dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
@@ -81,7 +94,7 @@
             android:layout_height="180dp"
             app:cardCornerRadius="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="20dp"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -93,10 +106,11 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_project"
-                android:paddingRight="50dp"
+                android:paddingRight="20dp"
                 android:src="@drawable/project_home"
-                android:layout_height="200dp"
-                android:layout_width="200dp"
+                android:layout_height="160dp"
+                android:layout_width="150dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
@@ -105,7 +119,7 @@
 
 
     <LinearLayout
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -130,9 +144,10 @@
 
             <ImageButton
                 android:id="@+id/btn_event"
-                android:paddingRight="50dp"
-                android:layout_width="200dp"
-                android:layout_height="211dp"
+                android:paddingRight="20dp"
+                android:layout_height="160dp"
+                android:layout_width="150dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/imageradious"
                 android:src="@drawable/event_home" />
         </androidx.cardview.widget.CardView>
@@ -141,7 +156,7 @@
             android:layout_height="180dp"
             app:cardCornerRadius="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="20dp"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -153,10 +168,11 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_about"
-                android:paddingRight="50dp"
+                android:paddingRight="30dp"
                 android:src="@drawable/about_home"
-                android:layout_height="200dp"
-                android:layout_width="200dp"
+                android:layout_height="160dp"
+                android:layout_width="150dp"
+                android:layout_marginTop="25dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
