--- a/app/src/main/res/layout/event_cardview.xml
+++ b/app/src/main/res/layout/event_cardview.xml
@@ -4,23 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/back"
-    android:layout_marginTop="10dp"
+    app:cardBackgroundColor="@color/back"
     >
 
     <ImageView
         android:id="@+id/img_event"
+        android:scaleType="fitXY"
         android:layout_width="130dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
         android:translationZ="120dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/recyshape2" />
+        android:src="@drawable/about_home" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="320dp"
         android:layout_height="170dp"
+        app:backgroundTint="@null"
+        app:cardBackgroundColor="#617C79"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
+        android:orientation="vertical"
         app:cardCornerRadius="30dp">
         <TextView
             android:paddingTop="50dp"
@@ -30,7 +34,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:text="MSP APP"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -42,7 +46,7 @@
             android:layout_marginLeft="20dp"
             android:paddingTop="50dp"
             android:text="Asdasdasd asd as dasdasd ad asdsa"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="14dp" />
 
 
