--- a/app/src/main/res/layout/project_cardview.xml
+++ b/app/src/main/res/layout/project_cardview.xml
@@ -3,16 +3,18 @@
     android:layout_width="match_parent"
     android:id="@+id/card_project_item"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    app:cardBackgroundColor="@color/back"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/Projectimage"
         android:layout_width="130dp"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY"
         android:translationZ="120dp"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/recyshape2"
         android:src="@drawable/mspgray" />
 
     <androidx.cardview.widget.CardView
@@ -20,35 +22,40 @@
         android:layout_width="320dp"
         android:layout_height="170dp"
         app:backgroundTint="@null"
-        android:background="@drawable/web_custom"
+        app:cardBackgroundColor="#617C79"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
         app:cardCornerRadius="30dp"
         >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <TextView
-            android:paddingTop="50dp"
             android:id="@+id/ProjectName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="55dp"
             android:text="MSP APP"
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="50dp"
+            android:text="sasssssssssaaaaasaaaassaasssssss"
             android:layout_marginLeft="20dp"
-            android:paddingTop="50dp"
-            android:text="Asdasdasd asd as dasdasd ad asdsa"
-            android:textColor="@color/black"
-            android:textSize="14dp" />
-
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:lineSpacingExtra="16dp"
+            android:textSize="14dp"
+           />
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
