--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,8 @@
         <item name="android:theme">@style/splash</item>
 
     </style>
+
+    <style name="MaterialComponents" parent="Theme.MaterialComponents">
+
+    </style>
 </resources>
