--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -62,6 +62,15 @@
         app:cardCornerRadius="25dp"
         app:cardBackgroundColor="@color/back"
         android:layout_height="match_parent">
+        <ProgressBar
+            android:id="@+id/progressBar_event"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:translationZ="120dp"
+            android:outlineSpotShadowColor="@color/white"
+            android:indeterminateTint="@color/tabindicator_gray"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_view_events"
         android:layout_width="match_parent"
