--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_marginLeft="10dp"
-        android:layout_height="180dp"
+        android:layout_height="120dp"
         app:cardCornerRadius="20dp"
         android:background="@color/back"
         android:layout_marginRight="10dp"
@@ -58,16 +58,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="8dp"
         >
         <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             app:cardCornerRadius="20dp"
-            android:layout_marginLeft="23dp"
-            android:layout_marginRight="5dp"
+            app:cardBackgroundColor="#F7F7F7"
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -79,22 +78,23 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_crew"
-                android:paddingRight="20dp"
                 android:src="@drawable/crew_home"
-                android:layout_height="160dp"
-                android:layout_width="150dp"
-                android:layout_marginTop="25dp"
+                android:layout_height="130dp"
+                android:layout_width="160dp"
+                android:scaleType="fitXY"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            app:cardBackgroundColor="#F7F7F7"
             app:cardCornerRadius="20dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
+
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -106,11 +106,11 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_project"
-                android:paddingRight="20dp"
                 android:src="@drawable/project_home"
-                android:layout_height="160dp"
-                android:layout_width="150dp"
-                android:layout_marginTop="25dp"
+                android:layout_height="130dp"
+                android:layout_width="160dp"
+                android:scaleType="fitXY"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
@@ -119,19 +119,20 @@
 
 
     <LinearLayout
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         >
         <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             app:cardCornerRadius="20dp"
-            android:layout_marginLeft="23dp"
-            android:layout_marginRight="5dp"
+            app:cardBackgroundColor="#F7F7F7"
+            android:layout_marginLeft="10dp"
+
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -144,19 +145,20 @@
 
             <ImageButton
                 android:id="@+id/btn_event"
-                android:paddingRight="20dp"
-                android:layout_height="160dp"
-                android:layout_width="150dp"
-                android:layout_marginTop="25dp"
+                android:layout_height="130dp"
+                android:layout_width="160dp"
+                android:scaleType="fitXY"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/imageradious"
                 android:src="@drawable/event_home" />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="180dp"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             app:cardCornerRadius="20dp"
+            app:cardBackgroundColor="#F7F7F7"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"
+
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -168,14 +170,47 @@
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/btn_about"
-                android:paddingRight="30dp"
                 android:src="@drawable/about_home"
-                android:layout_height="160dp"
-                android:layout_width="150dp"
-                android:layout_marginTop="25dp"
+                android:layout_height="130dp"
+                android:layout_width="160dp"
+                android:scaleType="fitXY"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/imageradious"
                 android:layout_marginRight="35dp"
                 />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:fabCradleMargin="20dp"
+        app:fabCradleVerticalOffset="8dp"
+        app:fabCradleRoundedCornerRadius="20dp"
+        android:background="@color/back"
+        android:backgroundTint="@color/back"
+        android:layout_marginTop="75dp"
+        android:gravity="bottom">
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottm_nav"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/back"
+            android:backgroundTint="@color/back"
+            android:layout_marginEnd="16dp"
+            app:menu="@menu/bottom_nav"/>
+    </com.google.android.material.bottomappbar.BottomAppBar>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:src="@drawable/ic_home"
+            app:layout_anchor="@id/bottom_app_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </LinearLayout>
