--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,61 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/back"
     android:orientation="vertical"
+    android:background="@drawable/web_custom"
     tools:context=".ui.home.HomeAcivity">
 
-     <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#E7EDF6"
-        tools:context=".MainActivity">
+        android:orientation="horizontal">
 
-
-    <TextView
-        android:id="@+id/Projects_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="cursive"
-        android:gravity="center_vertical"
-        android:paddingLeft="20dp"
-        android:paddingTop="20dp"
-        android:text="Home Services"
-        android:textColor="#617C79"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01" />
-
-     </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_height="120dp"
-        app:cardCornerRadius="20dp"
-        android:background="@color/back"
-        android:layout_marginRight="10dp"
-        >
-        <ImageView
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/Projects_id"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/back"
+            android:fontFamily="cursive"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="20dp"
+            android:text="Home Services"
+            android:textColor="@color/back"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.01" />
+
+    </LinearLayout>
+
+
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/web_custom"
             android:src="@drawable/fullgraylogo">
 
         </ImageView>
-    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginBottom="8dp"
         >
@@ -123,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         >
         <androidx.cardview.widget.CardView
@@ -207,6 +194,7 @@
     </com.google.android.material.bottomappbar.BottomAppBar>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
+            android:background="#E48C2E"
             android:src="@drawable/ic_home"
             app:layout_anchor="@id/bottom_app_bar"
             android:layout_width="wrap_content"
