--- a/app/src/main/res/layout/event_cardview.xml
+++ b/app/src/main/res/layout/event_cardview.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="10dp"
         android:translationZ="120dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/about_home" />
+        android:src="@drawable/about" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="320dp"
@@ -49,7 +49,28 @@
             android:textColor="@color/white"
             android:textSize="14dp" />
 
+        <TextView
+            android:id="@+id/event_discription2_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:layout_marginLeft="20dp"
+            android:paddingTop="50dp"
+            android:text="Shaimaa Hasaan Ali"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
 
+        <TextView
+            android:id="@+id/event_discription3_txt"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/web_custom"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="240dp"
+            android:text="30h"
+            android:gravity="center"
+            android:textColor="#617C79"
+            android:textSize="14dp" />
     </androidx.cardview.widget.CardView>
 
 </androidx.cardview.widget.CardView>
