--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/back"
+        android:background="@color/white"
         android:padding="30dp"
         android:src="@drawable/fullgraylogo"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:outlineSpotShadowColor="@color/white"
+        android:outlineSpotShadowColor="@color/logo_gray"
         android:indeterminateTint="@color/tabindicator_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
