--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/back"
+    android:background="@color/white"
     tools:context=".ui.about_us.AboutUs">
 
 
@@ -42,7 +42,7 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="6dp"
                 android:text="About"
-                android:textColor="#617C79"
+                android:textColor="@color/home_blue"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -66,28 +66,21 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/facebook"
+                        android:background="@drawable/facebook2"
                         />
                     <ImageView
                         android:id="@+id/img_youtube"
                         android:layout_marginLeft="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/youtube"
-                        />
-                    <ImageView
-                        android:id="@+id/img_instigram"
-                        android:layout_marginLeft="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/instgram"
+                        android:background="@drawable/youtube2"
                         />
                     <ImageView
                         android:id="@+id/img_linkedin"
                         android:layout_marginLeft="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/linkedin"
+                        android:background="@drawable/linkedin2"
                         />
 
                 </LinearLayout>
@@ -99,7 +92,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
                 android:paddingLeft="8dp"
-                android:backgroundTint="#88B5B0"
+                android:backgroundTint="@color/logo_blue"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
                 <TextView
@@ -122,7 +115,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
                 android:paddingLeft="8dp"
-                android:backgroundTint="#88B5B0"
+                android:backgroundTint="@color/logo_blue"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
                 <TextView
@@ -147,7 +140,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="8dp"
                 android:paddingLeft="8dp"
-                android:backgroundTint="#88B5B0"
+                android:backgroundTint="@color/logo_blue"
                 android:orientation="vertical"
                 app:cardCornerRadius="20dp">
                 <TextView
@@ -174,7 +167,7 @@
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:layout_marginLeft="8dp"
-                android:textColor="#617C79"
+                android:textColor="@color/home_blue"
                 android:text="OUR COMMUNITY"
                 android:paddingLeft="5dp"
                 />
@@ -190,7 +183,7 @@
                         android:layout_width="200dp"
                         android:layout_height="180dp"
                         app:cardCornerRadius="20dp"
-                        android:background="#F7F7F7"
+                        android:backgroundTint="#F7F7F7"
                         android:layout_marginLeft="8dp"
                         android:layout_marginRight="30dp"
                         android:layout_marginBottom="10dp"
@@ -200,16 +193,245 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:text="Android"
-                            android:textColor="#88B5B0"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
                             android:textSize="18dp"
                             android:textStyle="bold"/>
                         <ImageButton
                             android:background="@drawable/imageradious"
-                            android:layout_height="150dp"
+                            android:layout_height="130dp"
                             android:src="@drawable/android"
-                            android:layout_width="200dp"
+                            android:layout_width="150dp"
+                            android:layout_margin="25dp"
+                            android:scaleType="centerCrop"
+                            />
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Game"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:layout_height="130dp"
+                            android:src="@drawable/game"
+                            android:layout_width="150dp"
+                            android:scaleType="centerCrop"
+                           android:layout_margin="25dp"
+                            />
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:background="#F7F7F7"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Web"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:background="@drawable/imageradious"
+                            android:layout_height="130dp"
+                            android:src="@drawable/web"
+                            android:layout_width="150dp"
+                            android:scaleType="fitXY"
+                            android:layout_margin="25dp"
+                            />
+
+                        <ImageButton
+                            android:layout_width="150dp"
+                            android:layout_height="130dp"
                             android:layout_marginTop="20dp"
                             android:layout_marginRight="35dp"
+                            android:background="@drawable/imageradious"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/hr" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="200dp"
+                            android:layout_height="180dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="30dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="#F7F7F7"
+                            app:cardCornerRadius="20dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_horizontal"
+                                android:text="SW Testing"
+                                android:textAlignment="center"
+                                android:textColor="@color/home_blue"
+                                android:textSize="18dp"
+                                android:textStyle="bold" />
+
+                            <ImageButton
+                                android:layout_width="150dp"
+                                android:layout_height="130dp"
+                                android:layout_margin="25dp"
+                                android:backgroundTint="#F7F7F7"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/testing" />
+                        </androidx.cardview.widget.CardView>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:background="#F7F7F7"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="HR"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:background="@drawable/imageradious"
+                            android:layout_height="130dp"
+                            android:src="@drawable/hr"
+                            android:layout_width="match_parent"
+                            android:scaleType="centerCrop"
+                            android:layout_margin="25dp"
+                            />
+
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Media"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:background="@drawable/imageradious"
+                            android:layout_height="130dp"
+                            android:src="@drawable/media"
+                            android:layout_width="match_parent"
+                            android:scaleType="centerCrop"
+                           android:layout_margin="25dp"
+                            />
+                    </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:background="#F7F7F7"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="PR"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:background="@drawable/imageradious"
+                            android:layout_height="130dp"
+                            android:src="@drawable/pr"
+                            android:layout_width="150dp"
+                            android:scaleType="centerCrop"
+                          android:layout_margin="25dp"
+                            />
+                    </androidx.cardview.widget.CardView>
+
+
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:background="#F7F7F7"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Machine Learning"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:layout_height="130dp"
+                            android:src="@drawable/machine"
+                            android:layout_width="match_parent"
+                            android:scaleType="centerCrop"
+                           android:layout_margin="25dp"
+                            />
+                    </androidx.cardview.widget.CardView>
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="200dp"
+                        android:layout_height="180dp"
+                        app:cardCornerRadius="20dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
+                        >
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Flutter"
+                            android:textAlignment="center"
+                            android:textColor="@color/home_blue"
+                            android:textSize="18dp"
+                            android:textStyle="bold"/>
+                        <ImageButton
+                            android:layout_height="130dp"
+                            android:src="@drawable/flutter"
+                            android:layout_width="match_parent"
+                            android:scaleType="centerCrop"
+                          android:layout_margin="25dp"
                             />
                     </androidx.cardview.widget.CardView>
 
@@ -226,17 +448,14 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:text="Data science"
-                            android:textColor="#88B5B0"
+                            android:textColor="@color/home_blue"
                             android:textSize="18dp"
                             android:textStyle="bold"/>
                         <ImageButton
                             android:layout_height="150dp"
                             android:layout_width="match_parent"
-                            android:layout_marginTop="25dp"
-                            android:background="@drawable/imageradious"
                             android:src="@drawable/datascience"
-                            android:layout_marginRight="35dp"
-                            android:layout_marginLeft="20dp"
+                            android:layout_margin="25dp"
                             />
                     </androidx.cardview.widget.CardView>
 
@@ -253,24 +472,20 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:text="CYBER Security"
-                            android:textColor="#88B5B0"
+                            android:textColor="@color/home_blue"
                             android:textSize="18dp"
                             android:textStyle="bold">
 
                         </TextView>
                         <ImageButton
                             android:layout_height="150dp"
-                            android:layout_marginTop="25dp"
                             android:layout_width="match_parent"
                             android:background="@drawable/imageradious"
-                            android:src="@drawable/cyper"
-                            android:layout_marginLeft="20dp"
+                            android:src="@drawable/cyber"
+                            android:scaleType="fitXY"
+                            android:layout_margin="25dp"
                             />
                     </androidx.cardview.widget.CardView>
-
-
-
-
                 </LinearLayout>
             </HorizontalScrollView>
         </LinearLayout>
