--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E7EDF6"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context=".ui.event.EventActivity">
 
@@ -12,7 +12,6 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E7EDF6"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,7 @@
             android:paddingLeft="20dp"
             android:paddingTop="15dp"
             android:text="MSP EVENTS"
-            android:textColor="#617C79"
+            android:textColor="@color/home_blue"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         app:cardCornerRadius="25dp"
-        app:cardBackgroundColor="@color/back"
+
         android:layout_height="match_parent">
         <ProgressBar
             android:id="@+id/progressBar_event"
