--- a/app/src/main/res/layout/activity_event_description.xml
+++ b/app/src/main/res/layout/activity_event_description.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.event.EventDescription">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#E7EDF6"
         tools:context=".MainActivity">
     <ImageView
         android:id="@+id/back_disc"
@@ -22,85 +22,111 @@
         android:paddingLeft="20dp"
         android:paddingTop="6dp"
         android:textColor="#617C79"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
+        <TextView
+            android:id="@+id/Projects_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:paddingTop="15dp"
+            android:text="Event Description"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.01" />
     </LinearLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:elevation="20dp">
     <ImageView
         android:layout_marginTop="20dp"
         android:id="@+id/img_event_disc"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:translationZ="120dp"
+         android:elevation="20dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/recyshape2" />
+        android:src="@drawable/logogray" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="170dp"
-        app:cardCornerRadius="30dp">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
         <TextView
             android:paddingTop="10dp"
             android:id="@+id/event_tobic_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-           android:layout_marginTop="50dp"
+           android:layout_marginTop="20dp"
             android:text="MSP "
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
         <TextView
+            android:drawableLeft="@drawable/ic_time"
             android:paddingTop="10dp"
             android:id="@+id/event_time_disc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:text="time "
-            android:textColor="@color/black"
-            android:textSize="18sp"
+            android:text="   time "
+            android:textColor="@color/logo_blue"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
 
         <TextView
+            android:drawableLeft="@drawable/ic_event"
             android:id="@+id/event_discription_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:paddingTop="10dp"
-            android:text="Asdasdasd asd as dasdasd ad asdsa"
+            android:text="   Asdasdasd asd as dasdasd ad asdsa"
             android:textColor="@color/tabindicator_gray"
             android:textSize="14dp" />
 
-        <TextView
-            android:paddingTop="10dp"
-            android:id="@+id/event_fees_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="40dp"
-            android:text="fees"
-            android:lineSpacingExtra="16dp"
-            android:textColor="@color/logo_blue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                android:drawableLeft="@drawable/ic_location"
+                android:paddingTop="10dp"
+                android:id="@+id/event_location_disc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="   time "
+                android:textColor="@color/logo_blue"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/event_fees_desc"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="260dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/color_train2"
+                android:gravity="center"
+                android:text="30h"
+                android:textColor="#617C79"
+                android:textSize="14dp" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+</LinearLayout>
 
-</androidx.cardview.widget.CardView>
 
 
