--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,204 +1,276 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/web_custom"
+    android:background="@color/white"
     tools:context=".ui.home.HomeAcivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/Projects_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="cursive"
-            android:gravity="center_vertical"
-            android:paddingLeft="20dp"
-            android:paddingTop="20dp"
-            android:text="Home Services"
-            android:textColor="@color/back"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.01" />
-
-    </LinearLayout>
-
-
-        <ImageView
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/web_custom"
-            android:src="@drawable/fullgraylogo">
-
-        </ImageView>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/Projects_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="8dp"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardCornerRadius="20dp"
-            app:cardBackgroundColor="#F7F7F7"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Crew"
-                android:textColor="#88B5B0"
-                android:textSize="18dp"
-                android:textStyle="bold"/>
-            <ImageButton
-                android:id="@+id/btn_crew"
-                android:src="@drawable/crew_home"
-                android:layout_height="130dp"
-                android:layout_width="160dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imageradious"
-                android:layout_marginRight="35dp"
-                />
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardBackgroundColor="#F7F7F7"
-            app:cardCornerRadius="20dp"
-            android:layout_marginLeft="10dp"
-
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Project"
-                android:textColor="#88B5B0"
-                android:textSize="18dp"
-                android:textStyle="bold"/>
-            <ImageButton
-                android:id="@+id/btn_project"
-                android:src="@drawable/project_home"
-                android:layout_height="130dp"
-                android:layout_width="160dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imageradious"
-                android:layout_marginRight="35dp"
-                />
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
+        android:layout_marginTop="4dp"
+        android:fontFamily="cursive"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="5dp"
+        android:text="Home Services"
+        android:textColor="@color/home_blue"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.088"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardCornerRadius="20dp"
-            app:cardBackgroundColor="#F7F7F7"
-            android:layout_marginLeft="10dp"
+    <ImageView
+        android:id="@+id/imagelogo"
+        android:layout_width="384dp"
+        android:layout_height="85dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/fullgraylogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Projects_id">
 
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Event"
-                android:textColor="#88B5B0"
-                android:textSize="18dp"
-                android:textStyle="bold"/>
+    </ImageView>
 
-            <ImageButton
-                android:id="@+id/btn_event"
-                android:layout_height="130dp"
-                android:layout_width="160dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imageradious"
-                android:src="@drawable/event_home" />
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardCornerRadius="20dp"
-            app:cardBackgroundColor="#F7F7F7"
-            android:layout_marginLeft="10dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_crew"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        android:background="@drawable/color_train"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imagelogo">
 
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="About Us"
-                android:textColor="#88B5B0"
-                android:textSize="18dp"
-                android:textStyle="bold"/>
-            <ImageButton
-                android:id="@+id/btn_about"
-                android:src="@drawable/about_home"
-                android:layout_height="130dp"
-                android:layout_width="160dp"
-                android:scaleType="fitXY"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/imageradious"
-                android:layout_marginRight="35dp"
-                />
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottom_app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:fabCradleMargin="20dp"
-        app:fabCradleVerticalOffset="8dp"
-        app:fabCradleRoundedCornerRadius="20dp"
-        android:background="@color/back"
-        android:backgroundTint="@color/back"
-        android:layout_marginTop="75dp"
-        android:gravity="bottom">
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottm_nav"
+        <LinearLayout
+            android:id="@+id/pp_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/back"
-            android:backgroundTint="@color/back"
-            android:layout_marginEnd="16dp"
-            app:menu="@menu/bottom_nav"/>
-    </com.google.android.material.bottomappbar.BottomAppBar>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:background="#E48C2E"
-            android:src="@drawable/ic_home"
-            app:layout_anchor="@id/bottom_app_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</LinearLayout>
+            android:layout_marginRight="0dp"
+            android:background="@drawable/color_train"
+            android:elevation="8dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="Crew"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/staff" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:background="@drawable/color_train"
+
+        android:id="@+id/card_event"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_crew">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:elevation="8dp"
+            android:gravity="center"
+            android:layout_marginRight="0dp"
+            android:background="@drawable/color_train"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:text="Events"/>
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/planner"
+                />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_project"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="227dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="10dp"
+        app:cardCornerRadius="20dp"
+        android:background="@drawable/color_train"
+
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.863"
+        app:layout_constraintTop_toBottomOf="@+id/imagelogo">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:elevation="8dp"
+            android:gravity="center"
+            android:layout_marginRight="0dp"
+            android:background="@drawable/color_train"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:text="Projects"/>
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/project2"
+                />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+
+        android:background="@drawable/color_train"
+        android:id="@+id/card_about"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        android:layout_marginRight="10dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintTop_toBottomOf="@+id/card_project">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="0dp"
+            android:background="@drawable/color_train"
+            android:elevation="8dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:text="About US"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:src="@drawable/about5" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/txt_disc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="cursive"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:text="Knowledge Shared is Knowledge 2"
+        android:textColor="@color/home_blue"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/include"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.877" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="cursive"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="5dp"
+        android:text="MSP Tech Club - ASU"
+        android:textColor="@color/home_blue"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/include"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_disc"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/icons_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
