--- a/app/src/main/res/layout/crew_cardview.xml
+++ b/app/src/main/res/layout/crew_cardview.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rating_bare_drug_pharmacy"
     android:layout_width="match_parent"
-    app:cardBackgroundColor="@color/back"
     android:layout_height="wrap_content"
     app:cardCornerRadius="20dp"
-
-    android:layout_margin="10dp">
+    android:layout_marginTop="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/web_custom"
+            android:background="@drawable/color_train2"
             android:backgroundTint="@null"
             android:padding="10dp">
 
@@ -21,7 +19,9 @@
                     android:id="@+id/card_member"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:cardCornerRadius="40dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardBackgroundColor="@color/white"
+                    android:layout_marginLeft="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +29,7 @@
                         <ImageView
                             android:id="@+id/img_member"
                             android:layout_width="130dp"
-                            android:layout_height="80dp"
+                            android:layout_height="100dp"
                             android:scaleType="fitXY"
                             app:srcCompat="@drawable/n">
 
@@ -42,13 +42,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="4dp"
-                    android:background="@drawable/round"
+
                     android:ellipsize="end"
                     android:gravity="center"
                     android:maxLines="2"
                     android:src="@drawable/n"
                     android:text="Norhan Mahmoud"
-                    android:textColor="#617C79"
+                    android:textColor="@color/home_blue"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/card_member"
@@ -62,10 +62,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/round"
                     android:gravity="center"
                     android:text="Voice Head"
-                    android:textColor="#617C79"
+                    android:textColor="@color/home_blue"
                     android:textSize="14dp"
                     app:layout_constraintStart_toEndOf="@+id/card_member"
                     app:layout_constraintTop_toBottomOf="@+id/txt_community">
@@ -78,10 +77,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/round"
                     android:gravity="center"
                     android:text="Android"
-                    android:textColor="#617C79"
+                    android:textColor="@color/home_blue"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/card_member"
