--- a/app/src/main/res/layout/intro_sreen.xml
+++ b/app/src/main/res/layout/intro_sreen.xml
@@ -51,7 +51,7 @@
 
     <ImageView
         android:id="@+id/intro_img"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="222dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
