--- a/app/src/main/res/layout/project_cardview.xml
+++ b/app/src/main/res/layout/project_cardview.xml
@@ -3,60 +3,75 @@
     android:layout_width="match_parent"
     android:id="@+id/card_project_item"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/back"
-
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    
+<LinearLayout
+    android:layout_marginBottom="50dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:translationZ="100dp">
     <ImageView
         android:id="@+id/Projectimage"
+        android:scaleType="fitXY"
+        android:background="@drawable/color_train"
         android:layout_width="130dp"
         android:layout_height="80dp"
         android:layout_marginTop="10dp"
-        android:scaleType="fitXY"
         android:translationZ="120dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/mspgray" />
-
+        android:src="@drawable/project_logo" />
+</LinearLayout>
     <androidx.cardview.widget.CardView
-
         android:layout_width="320dp"
         android:layout_height="170dp"
         app:backgroundTint="@null"
         app:cardBackgroundColor="#617C79"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical"
-        app:cardCornerRadius="30dp"
-        >
-        <LinearLayout
+        app:cardCornerRadius="30dp">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        <TextView
-            android:id="@+id/ProjectName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="55dp"
-            android:text="MSP APP"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:background="@drawable/color_train">
 
-        <TextView
-            android:id="@+id/content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sasssssssssaaaaasaaaassaasssssss"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:lineSpacingExtra="16dp"
-            android:textSize="14dp"
-           />
-        </LinearLayout>
+            <TextView
+                android:id="@+id/ProjectName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:paddingTop="50dp"
+                android:text="MSP APP"
+                android:textColor="@color/home_blue"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="50dp"
+                android:layout_marginLeft="20dp"
+                android:paddingTop="50dp"
+                android:text="Asdasdasd asd as dasdasd ad asdsa"
+                android:textColor="@color/home_blue"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/time_discription2_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="80dp"
+                android:paddingTop="50dp"
+                android:text="Shaimaa Hasaan Ali"
+                android:textColor="@color/home_blue"
+                android:textSize="14dp" />
+
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 </androidx.cardview.widget.CardView>
