--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gold">#8F763E</color>
+    <color name="logo_gray">#656568</color>
     <color name="start_color">#4c84ff</color>
     <color name="logo_blue">#01A3F1</color>
     <color name="logo_orange">#F25123</color>
@@ -15,5 +17,6 @@
     <color name="title_color">#656565</color>
     <color name="back">#E7EDF6</color>
     <color name="app_background">#E7EDF6</color>
+    <color name="home_blue">#091353</color>
 
 </resources>
