--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -34,7 +34,7 @@
             app:layout_constraintVertical_bias="0.01" />
     <TextView
         android:id="@+id/Projects_id"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:gravity="center_vertical"
@@ -50,6 +50,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
+         <SearchView
+             android:layout_width="50dp"
+             android:layout_height="50dp"
+             android:id="@+id/action_Search"
+             android:layout_marginTop="20dp"
+              android:layout_marginRight="10dp"
+             android:src="@drawable/ic_search"/>
      </LinearLayout>
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -62,7 +69,7 @@
             android:orientation="horizontal">
 
             <Button
-
+               android:id="@+id/android"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="5dp"
@@ -72,6 +79,7 @@
                 android:textColor="@color/black" />
 
             <Button
+                android:id="@+id/flutter"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -81,6 +89,7 @@
                 android:layout_marginLeft="30dp"/>
 
             <Button
+                android:id="@+id/web"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -90,6 +99,7 @@
                 android:layout_marginLeft="30dp"/>
 
             <Button
+                android:id="@+id/game"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -98,6 +108,7 @@
                 android:textColor="@color/cardview_dark_background"
                 android:layout_marginLeft="30dp"/>
             <Button
+                android:id="@+id/data_science"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -106,6 +117,7 @@
                 android:textColor="@color/cardview_dark_background"
                 android:layout_marginLeft="30dp"/>
             <Button
+                android:id="@+id/cyber"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
@@ -114,6 +126,7 @@
                 android:textColor="@color/cardview_dark_background"
                 android:layout_marginLeft="30dp"/>
             <Button
+                android:id="@+id/machine"
                 app:backgroundTint="@null"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
