--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,31 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_event"
-        android:title="event"
-        android:icon="@drawable/ic_event"
-        />
-    <item
-        android:id="@+id/menu_crew"
-        android:title="crew"
-        android:icon="@drawable/ic_team"
-
-        />
-    <item
-        android:id="@+id/menu_anchore"
-        android:title=""
-
-        />
-    <item
-        android:id="@+id/menu_recrutment"
-        android:title="recrutment"
-        android:icon="@drawable/ic_recrutment"
-        />
-    <item
-        android:id="@+id/menu_close"
-        android:title="close"
-        android:icon="@drawable/ic_close"
+        android:id="@+id/action_Search"
+        android:title="search"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.widget.SearchView"
         />
 
 
