--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="back">#E7EDF6</color>
     <color name="app_background">#E7EDF6</color>
     <color name="home_blue">#091353</color>
+    <color name="crew_yellow">#FFC300</color>
+    <color name="crew_yelloow">#F8C471</color>
 
 </resources>
