--- a/app/src/main/res/layout/project_cardview.xml
+++ b/app/src/main/res/layout/project_cardview.xml
@@ -4,13 +4,7 @@
     android:id="@+id/card_project_item"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
-<LinearLayout
-    android:layout_marginBottom="50dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:translationZ="100dp">
+
     <ImageView
         android:id="@+id/Projectimage"
         android:scaleType="fitXY"
@@ -21,9 +15,9 @@
         android:translationZ="120dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/project_logo" />
-</LinearLayout>
+
     <androidx.cardview.widget.CardView
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="170dp"
         app:backgroundTint="@null"
         app:cardBackgroundColor="#617C79"
